[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Objects/FakePlayer.gd" type="Script" id=2]
[ext_resource path="res://Fonts/arial.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.50481

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8.25, 14.75 )

[node name="Player" type="KinematicBody2D"]
scale = Vector2( 4, 4 )
collision_mask = 0
script = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -51.75
margin_top = -37.05
margin_right = 460.25
margin_bottom = -0.0499954
rect_scale = Vector2( 0.2, 0.2 )
custom_fonts/font = SubResource( 1 )
text = "Guest"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirtTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="DirectionTimer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.25 )
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.25, 6.75 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.25, -14.25 )
shape = SubResource( 3 )

[node name="ChangeDirectionTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true
[connection signal="timeout" from="DirtTimer" to="." method="_on_DirtTimer_timeout"]
[connection signal="timeout" from="DirectionTimer" to="." method="_on_DirectionTimer_timeout"]
[connection signal="timeout" from="ChangeDirectionTimer" to="." method="_on_ChangeDirectionTimer_timeout"]
